--- a/windows/installer/Variables.wxs
+++ b/windows/installer/Variables.wxs
@@ -3,7 +3,7 @@
   <!-- Product Information -->
   <?define ProductName = "Cylonix Node Agent" ?>
   <?define ProductVersion = "1.0.7" ?>
-  <?define ProductManufacturer = "EZBLOCK, Inc." ?>
+  <?define ProductManufacturer = "EZBLOCK INC." ?>
   <?define ProductUpgradeCode = "{8ECC1F1E-F887-41C3-801C-4D21EA6B6F47}" ?>
 
   <!-- GUIDs -->
